@@ -76,7 +76,7 @@ Speed of simulation in seconds per day.
 \fB\-\-realtime\fR
 Realtime playback speed.
 .TP
-\fB\-\-no-time-travel\fR
+\fB\-\-no\-time\-travel\fR
 Use the time of the last commit if the time of a commit is in the past.
 .TP
 \fB\-c, \-\-time\-scale SCALE\fR
@@ -150,6 +150,9 @@ Font colour for directories.
 .TP
 \fB\-\-dir\-name\-depth DEPTH\fR
 Draw names of directories down to a specific depth in the tree.
+.TP
+\fB\-\-dir\-name\-position FLOAT
+Position along edge of the directory name (between 0.1 and 1.0, default is 0.5).
 .TP
 \fB\-\-filename\-time SECONDS\fR
 Duration to keep filenames on screen (>= 2.0).
