@@ -1,5 +1,6 @@
 0.50:
  * Added --no-time-travel option (Lars Schmertmann).
+ * Added --dir-name-position option (Lars Schmertmann).
  * Fixed a bug in the log file format detection that could result in the wrong
    first entry being displayed for a custom log.
 
